<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".LoginActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:id="@+id/loginText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="Giriş Yap"
                android:textAlignment="center"
                android:textColor="@color/stockcolor"
                android:textSize="36sp"
                android:textStyle="bold"
                tools:ignore="RtlCompat" />

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:autofillHints=""
                android:background="@drawable/custom_edittext"
                android:drawableLeft="@drawable/baseline_email_24"
                android:drawablePadding="8dp"
                android:hint="Email"
                android:padding="8dp"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_edittext"
                android:drawableLeft="@drawable/baseline_lock_24"
                android:drawablePadding="8dp"
                android:hint="Şifre"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColor="@color/black" />


            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:text="or login with"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="0dp"
                android:gravity="center"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/googleButton"
                    android:layout_width="130dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="1dp"
                    android:layout_weight="1"
                    android:background="@drawable/custom_edittext"
                    android:drawableLeft="@drawable/google_drawable"
                    android:text="@string/google"
                    android:textColor="#2196F3"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/facebookButton"
                    android:layout_width="149dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="0dp"
                    android:layout_weight="1"
                    android:background="@drawable/custom_edittext"
                    android:drawableLeft="@drawable/facebook_drawable"
                    android:drawablePadding="0dp"
                    android:text="@string/facebook_app"
                    android:textColor="#2196F3"
                    android:textSize="18sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="0dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="182dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:singleLine="true"
                    android:text="@string/hala_hesab_n_z_yok_mu"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/registerButton"
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:layout_gravity="end|center_vertical"
                    android:layout_marginStart="0dp"
                    android:background="@drawable/custom_edittext"
                    android:text="@string/kay_t_ol"
                    android:textColor="#2196F3"
                    android:textSize="16sp" />

            </LinearLayout>


        </LinearLayout>


    </androidx.cardview.widget.CardView>


    <Button
        android:id="@+id/continuebtn"
        android:layout_width="159dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/oval_button_background"
        android:text="Giriş"
        android:textColor="@color/black" />

</LinearLayout>